changes to height of page and fixing all the links on the page zith z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -364,6 +364,7 @@ html,body, #root, .App, .content {
   .resume-height {
     overflow: visible;
     position: relative;
+    height: 100vh;
   }
   
   @keyframes animation {
